objects/Antra_Department__c.object
<CustomObject>
    <label>Antra Department</label>
    <nameField>
        <label>Antra Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Antra Departments</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Antra_Department_ID__c</fullName>
        <displayFormat>DP-{000}</displayFormat>
        <externalId>true</externalId>
        <label>Antra Department ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Antra_Department_Head__c</fullName>
        <label>Antra Department Head</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>